# quack

./: LICENSE  README.md  setup.cfg  todo.md
quack/: __init__.py  quack.py
quack/data/: styles.json
