[metadata]
name = quack
version = 0.0.1
author = Charl-Alexandre Le Brun
author_email = Charl-Alexandre@outlook.com
description = lib to style i/o for exploits and prototypes
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = quack, quack/data
python_requires = >=3.6
install_requires = 
    colorama ~= 0.4.4

[options.package_data]
* = *.json

